sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var j: Int;
    ^AlgSelectionSort:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var i: Int;
    ^