sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
var lgr: Int = getNombreValeurs();
var jMin: Int = 0;
var j: Int;
var i: Int;
for ( i <- 0 to lgr-1){
	for( j <- i to lgr){
		if(plusPetit(j,jMin)){
			jMin=j;
		}
	}
	echange(i,jMin);
}

}
